--- a/skysub.tex
+++ b/skysub.tex
@@ -337,14 +337,14 @@ For a typical frame, the dispersion of zeropoint estimates about the median is 0
 \subsection{Zeroth-order Mosaics}
 \label{sec:rawmosaic}
 
-\begin{figure*}[t]
+\begin{figure}[t]
 	\centering
-		\includegraphics[width=6in]{figs/raw_mosaics}
+		\includegraphics[width=3.5in]{figs/raw_mosaics}
 	\caption{Median sky subtracted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31.}
 	\label{fig:raw_mosaics}
 	% made with skysubpub/mosaic_plots.py
 	% + skysubpub/raw_mosaic.py
-\end{figure*}
+\end{figure}
 
 In Fig. \ref{fig:raw_mosaics} we plot mosaics (assembled using \sw{Swarp}) from \androids\ frames processed thus far. Although these basic image preparations dramatically improve image quality the \iiwione\ pipeline (particularly with regards to flat fielding performance), we see that classical NIR sky subtraction on a target as large as M31 is limited by an uncertainty of 1\% of the sky intensity. Classically, the true value of the sky on the disk of M31 is lost by the temporal and spatial variations of skyglow between disk and sky field observations.
 
@@ -424,6 +424,7 @@ Given the image coupling records, I optimize the set of $\Delta_i$ using the \ci
 But NM has two weaknesses. First, it is a \emph{greedy} optimizer that will converge into any local minimum, without necessarily seeking the global minimum. Second, for high-dimension optimizations (many fields in the mosaic), the NM may fail to converge in a reasonable number of objective function evaluations \citep{Neumann:2006}. Without solving these issues, a minimization of Eq. \ref{eq:objf} with an off-the-shelf NM code yields a mosaic with obvious discontinuities across fields. To solve the first problem, I develop a Multi-Start Reconverging NM (MSRNM) downhill simplex driver in Appendix \ref{cha:simplex}. This algorithm allows the NM to cumulatively cover a larger portion of parameter space to probabilistically ensure convergence into a global optimum.
 
 \section{Analysis of Scalar Sky Offsets}
+\label{sec:scalaranalysis}
 
 \begin{itemize}
 \item Figure \ref{fig:scalar_mosaics} --- maps
@@ -433,13 +434,13 @@ But NM has two weaknesses. First, it is a \emph{greedy} optimizer that will conv
 \item Bootstrap to show uniqueness of solution (perhaps move this to section with comparison to Montage)
 \end{itemize}
 
-\begin{figure*}[t]
+\begin{figure}[t]
 	\centering
-		\includegraphics[width=6in]{figs/scalar_mosaics}
+		\includegraphics[width=3.5in]{figs/scalar_mosaics}
 	\caption{Scalar-sky fitted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31. Note the qualitative improvement compared to the original, median sky-subtracted, images in Fig. \ref{fig:raw_mosaics}.}
 	\label{fig:scalar_mosaics}
 	% made with skysubpub/mosaic_plots.py
-\end{figure*}
+\end{figure}
 
 \begin{table}[t]
     \centering
@@ -502,32 +503,32 @@ Offset Type & Sem. & $\sigma_\Delta$ & $\frac{\sigma_\Delta}{\langle I_\mathrm{s
 % total K 2007 18.0 1.49
 % total K 2009 18.1 1.12
 
-\begin{figure*}[t]
+\begin{figure}[t]
     \centering
-        \includegraphics[width=6in]{figs/offset_ratio_map_enhanced}
+        \includegraphics[width=3.5in]{figs/offset_ratio_map_enhanced}
     \caption{Acceptability of $J$ and $K_s$ scalar sky offsets between blocks, as measured by the ratio of $\Delta_\mathrm{block}/\sigma_\mathrm{stack}$.}
     \label{fig:offset_ratio_map}
     % made with skyoffset/offsetratiomap.py
     % TODO need to fix colour scheme of the histograms
-\end{figure*}
+\end{figure}
 
-\begin{figure*}[t]
+\begin{figure}[t]
     \centering
-        \includegraphics[width=6in]{figs/scalar_residual_sb_net}
+        \includegraphics[width=3.5in]{figs/scalar_residual_sb_net}
     \caption{Residual surface brightness differences after scalar fitting.}
     \label{fig:scalar_residual_sb_net}
     % made with skyoffset/networkmap.py
     % TODO need to fix colour scheme of the histograms
-\end{figure*}
+\end{figure}
 
-\begin{figure*}[t]
+\begin{figure}[t]
     \centering
-        \includegraphics[width=6in]{figs/scalar_relresidnet}
+        \includegraphics[width=3.5in]{figs/scalar_relresidnet}
     \caption{Residual surface brightness differences relative to the intensity uncertainty of the coupled difference images.}
     \label{fig:scalar_relresidnet}
     % made with skyoffset/networkmap.py
     % TODO need to fix colour scheme of the histograms
-\end{figure*}
+\end{figure}
 
 \section{Planar Sky Offsets}
 
@@ -586,28 +587,98 @@ Optimized planar offsets can add a arbitrary amount of flux to a mosaic, and thi
 	\item Residual network plot
 \end{itemize}
 
-\begin{figure*}[t]
+\begin{figure}[t]
 	\centering
-		\includegraphics[width=6in]{figs/planar_mosaics}
+		\includegraphics[width=3.5in]{figs/planar_mosaics}
 	\caption{Planar sky fitted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31.}
 	\label{fig:planar_mosaics}
 	% made with skysubpub/mosaic_plots.py
-\end{figure*}
+\end{figure}
 
 \section{Systematic Uncertainties in Surface Brightness Reconstruction}
 
-\begin{itemize}
-	\item Comparison to Montage's solution, e.g. figure \ref{fig:montage_planar_mosaics} and a percent difference map.
-	\item Bootstrap analysis of scalar offset solutions (will result in an RMS pixel map of mosaic constructed from different initial offsets.)
-\end{itemize}
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3.5in]{figs/sbdiff/scalar_irac36_sbdiff.pdf}
+    \caption{Maps of $J-[3.6]$ and $K_s-[3.6]$ surface colour inferred from the scalar-sky fitted WIRCam mosaics (see \S\ref{sec:scalar}--\ref{sec:scalaranalysis}) and Spitzer/IRAC 3.6~$\mu$m image \citep{Barmby:2006}.}
+    \label{fig:scalar_irac36_sbdiff}
+    % make with skysubpub/diffplots.py
+\end{figure}
 
-\begin{figure*}[t]
-	\centering
-		\includegraphics[width=6in]{figs/montage_planar_mosaics}
-	\caption{\sw{Montage} Planar sky fitted WIRCam $J$ (left) and $K_s$ (right) mosaics of M31.}
-	\label{fig:montage_planar_mosaics}
-	% made with skysubpub/mosaic_plots.py
-\end{figure*}
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3.5in]{figs/sbdiff/altplanar_irac36_sbdiff.pdf}
+    \caption{Maps of $J-[3.6]$ and $K_s-[3.6]$ surface colour inferred from the scalar-sky fitted WIRCam mosaics (see \S\ref{sec:scalar}--\ref{sec:scalaranalysis}) and Spitzer/IRAC 3.6~$\mu$m image \citep{Barmby:2006}.}
+    \label{fig:altplanar_irac36_sbdiff}
+\end{figure}
+
+Sky offsets produce a mosaic that is rigorously optimal only in the sense of field-to-field surface brightness continuity. The technique does not gaurantee that surface brightness is calibrated in an absolute sense. In this section, we attempt to gauge the systematic surface brightness error inherent in this technique.
+
+\subsection{Comparison to Spitzer/IRAC Images}
+
+A template for the old stellar disk, is the 3.6~$\mu$m Spitzer/IRAC map, presented in \cite{Barmby:2006}.
+% Aside from hot dust features in the 10 kpc star forming ring, and radial color gradients, a comparison of the 3.6 \mu m surface brightness against the reconstructed $J$ and $K_s$ mosaics
+In Fig. \ref{fig:scalar_irac36_sbdiff} we compare the scalar-fitted mosaics against the 3.6~$\mu$m image. Generally, $J-[3.6]$ and $K_s-[3.6]$ decreases with disk radius, but increases in the star forming regions because of hot dust emission. Both the scalar-fitted $J$ and $K_s$ mosaics are artificially reddened in the south-eastern corner, which we interpret as a systematic \emph{over-subtraction} of the WIRCam NIR sky. In $J-[3.6]$ and $K_s-[3.6]$ maps realized with planar-fitted sky, Fig. \ref{fig:altplanar_irac36_sbdiff}, a similar, though stronger, systematic sky error is seen. This result qualitatively illustrates the greater potential for sysematic sky errors when planar sky corrections are permitted to the 20 arcmin$^2$ WIRCam blocks.
+
+\subsection{Comparison to \sw{Montage}-fitted images}
+
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3.5in]{figs/montage_planar_mosaics.pdf}
+    \caption{Montage-generated $J$ and $K_s$ maps. Compare to the equivalent simplex maps, Figs. \ref{fig:scalar_mosaics} and \ref{fig:planar_mosaics}.}
+    \label{fig:montage_planar_mosaics}
+    % make with skysubpub/mosaic_plots.py and skyoffset/montageoffsets.py
+\end{figure}
+
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3.5in]{figs/sbdiff/montage_irac36_sbdiff.pdf}
+    \caption{Maps of $J-[3.6]$ and $K_s-[3.6]$ surface colour inferred from the \sw{Montage}-fitted WIRCam mosaics (see Fig. \ref{fig:montage_planar_mosaics}).}
+    \label{fig:montage_irac36_sbdiff}
+    % make with skysubpub/diffplots.py
+\end{figure}
+
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3.5in]{figs/sbdiff/altplanar_jk_sbdiff.pdf}
+    \caption{$J-K_s$ colour maps realized by the simplex planar sky fitting algorithm (left) and \sw{Montage} (right).}
+    \label{fig:altplanar_jk_sbdiff}
+    % make with skysubpub/diffplots.py
+\end{figure}
+
+
+Although this paper advocates a sky offset optimization based on the Nelder Mead Downhill Simplex algorithm, other tools exist for solving sky background corrections. A popular package is \sw{Montage} \citep{Berriman:2008}. Like the algorithms presented in this paper, \sw{Montage} uses the network of image-to-image differences to infer sky offsets. Rather than simultaneosly solve for the offsets, \sw{Montage} uses an iterative algorithm: offsets are proposed that arithmetically solves one pair of images, and that change is propagated into the adjacent pair, which are again arithmetically solved, and so forth.
+
+Figure \ref{fig:montage_planar_mosaics} shows mosaics generated by Montage, allowing for planar sky offsets. These surface brightness realizations lead to $J-[3.6]$ and $K_s-[3.6]$ maps in Fig. \ref{fig:montage_irac36_sbdiff}. Comparing the simplex-optimized color map (Fig \ref{fig:altplanar_irac36_sbdiff}) against the \sw{Montage} realization, it is plain that the two algorithms find different sets of globally optimum sky offsets. And neither of the solutions is optimizal in the sense of absolute calibration.
+
+Another useful comparison is Figure \ref{fig:altplanar_jk_sbdiff}, where $J-K_s$ color maps are realized by both the simplex planar-fiting and \sw{Montage} algorithms. Unlike the comparisons against $[3.6]$, these color maps test the entire \androids\ footprint. Absolute calibration of the NIR surface brightness is a clear requisite before these images are scientifically useful.
+
+\subsection{Bootstrap analysis of systematic surface brightness uncertainties}
+
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3.5in]{figs/bootstrap_sb_rms.pdf}
+    \caption{Maps of bootstrap RMS surface brightness in $J$ (left) and $K_s$ (right) mosaics. White contours demark RMS levels of 0.05 (solid), 0.1 (dashed) and 0.2 (dash-dot) mag arcsec$^{-2}$.}
+    \label{fig:bootstrap_sb_rms}
+    % made with skyoffset/bootstrap.py BootstrapRMSPlot
+\end{figure}
+
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=3.5in]{figs/bootstrap_recovery_map.pdf}
+    \caption{Maps of dispersions in the difference fo expected and observed sky offsets in bootstrap realizations of the $J$ (left) and $K_s$ (right) mosaics. The 2009B fields are plotted over top of the 2007B fields (see Fig. \ref{fig:fieldmap}).}
+    \label{fig:bootstrap_recovery_map}
+    % made with skyoffset/bootstrap.py OffsetRecoveryFieldMap
+\end{figure}
+
+
+The difference images presented in the previous section, and particularly Fig \ref{fig:altplanar_jk_sbdiff}, illustrate how the surface brightness reconstructions of identical data can vary depending on the optimization algorithm. Here we pose a slightly different question: how are reconstructions affected by the initial conditions of sky errors? We can answer with a boostrap analysis.
+
+A bootstrap realization is generated by perturbing the surface brightness of the corrected blocks with a sky error, drawn (with replacement) from the ensemble of block sky offsets observed in the original mosaic (Fig. \ref{fig:scalar_mosaics}). Using the scalar-sky fitting procedure, sky offsets  are optimized against the known sky perturbations. \todo{Several hundred} such realizations are made to compile an ensemble of mosaics.
+
+Figure \ref{fig:bootstrap_sb_rms} shows the RMS deviation of bootstrapped mosaic surface brightness against the original scalar-fitted mosaics. Reconstructed surface brightness in the outer disk can vary $\sim 1$ mag arcsec$^{-2}$, consistent with colour biases in the $J-[3.6]$ and $K_s-[3.6]$ maps.
+
+Another view into this effect is Fig. \ref{fig:bootstrap_recovery_map}, where the standard deviations between expected and realized sky bootstrap offsets is plotted. These maps show that the typical error in realized offset, compared to input sky perturbation, is 0.05\%--0.10\% of the sky intensity. One hypothesis is that this sky offset recovery error is due to flexure in the mosaic---where blocks on the mosaic periphery are forced to conform to the surface brightness of more central and tightly coupled blocks. Yet Fig. \ref{fig:bootstrap_recovery_map} does not show a clear outside-in trend. The $J$ map (Fig \ref{fig:bootstrap_recovery_map} [left]) does a slight north-south trend, but more abudant is the precision with with sky perturbations for the 2009B fields were recovered. \todo{Why?}
 
 \bibliography{master}
 
